<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
                android:background="@drawable/login_960"
                xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:inputType="text"
              android:id="@+id/user_name"
              android:layout_centerHorizontal="true"
              android:hint="@string/login_user_hint"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp"
              android:padding="10dp"
              android:background="@drawable/edittext_background"
            android:layout_marginTop="@dimen/login.edittext.margintop"
            android:layout_centerVertical="true"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:id="@+id/user_pass"
              android:layout_centerHorizontal="true"
              android:hint="@string/login_password_hint"
              android:layout_marginLeft="30dp"
              android:layout_marginTop="10dp"
              android:layout_marginRight="30dp"
              android:padding="10dp"
              android:background="@drawable/edittext_background"
              android:layout_below="@id/user_name" />

    <ImageButton android:id="@+id/id_plus_info_button"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_alignTop="@id/user_pass"
                 android:layout_alignBottom="@id/user_pass"
                 android:layout_alignRight="@id/user_pass"
                 android:background="@drawable/ic_launcher"/>

    <Button android:layout_width="100dp" android:layout_height="60dp" android:id="@+id/login"
                 android:clickable="true" android:src="@drawable/foto_perfil_croped"
                 android:layout_below="@id/user_pass"
                 android:contentDescription="@string/splash_login_button"
                 android:text="@string/splash_login_button" android:layout_centerHorizontal="true"
                 android:layout_margin="10dp"/>
</RelativeLayout>